test/tests/stages/9_functions/valid/extra_credit/compound_assign_function_result.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[31]:
  int
  identifier(foo)
  (
  void
  )
  {
  return
  const int(2)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(x)
  =
  const int(3)
  ;
  identifier(x)
  -=
  identifier(foo)
  (
  )
  ;
  return
  identifier(x)
  ;
  }
