test/tests/stages/9_functions/invalid_parse/initialize_function_as_variable.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(foo)
  (
  void
  )
  =
  const int(3)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  const int(0)
  ;
  }
